feat: implementar el ítem Debris Resonator con funcionalidad de batería, estados visuales y modelos dinámicos